FluentValidation was implemented and CustomException filter was created.

--- a/Northwind/Northwind.MvcWebUI/Areas/Admin/Views/Product/Index.cshtml
+++ b/Northwind/Northwind.MvcWebUI/Areas/Admin/Views/Product/Index.cshtml
@@ -12,11 +12,14 @@
 </head>
 <body>
     <div>
-        @foreach (var product in Model.Products)
+        @Html.ValidationMessage("CustomException")
+    </div>
+    <div>
+        @*@foreach (var product in Model.Products)
         {
             @product.ProductName
             <br />
-        }
+        }*@
     </div>
 </body>
 </html>
